--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "gulp": "^3.8.11"
   },
   "scripts": {
-    "build": "webpack --config <path_to_webpack_config>/webpack.config.js",
-    "start-hot": "node server.js",
-    "start": "webpack-dev-server --content-base public/ --inline --port 3001"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +19,7 @@
   },
   "homepage": "https://github.com/Kirilllert/codeX-music#readme",
   "devDependencies": {
-    "webpack": "^4.41.0"
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
