--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "webpack-dev-server": "^3.8.1"
   },
   "scripts": {
+    "dev": "webpack-dev-server --mode development --open",
     "build": "webpack"
   },
   "repository": {
@@ -19,6 +21,7 @@
   },
   "homepage": "https://github.com/Kirilllert/codeX-music#readme",
   "devDependencies": {
+    "path": "^0.12.7",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   }
