--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "webpack-dev-server": "^3.8.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Kirilllert/codeX-music#readme",
   "devDependencies": {
-    "path": "^0.12.7",
+    "bootstrap": "^4.3.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   }
